--- a/Pear/Controllers/New Redesign/Create User/Pick Endorsed Contact/UserContactListViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Pick Endorsed Contact/UserContactListViewController.storyboard
@@ -10,8 +10,8 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Nunito-Regular.ttf">
-            <string>Nunito-Regular</string>
+        <array key="OpenSans-ExtraBold.ttf">
+            <string>OpenSans-ExtraBold</string>
         </array>
     </customFonts>
     <scenes>
@@ -27,8 +27,8 @@
                                 <rect key="frame" x="0.0" y="56" width="414" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step 1: Pick a fresh friend to Pear" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="I71-5B-LuA">
-                                        <rect key="frame" x="-1" y="0.5" width="416" height="39"/>
-                                        <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="28"/>
+                                        <rect key="frame" x="36.5" y="6.5" width="341.5" height="27.5"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
